Fixed dark mode aside bg color

--- a/bookface_auto.css
+++ b/bookface_auto.css
@@ -4033,6 +4033,9 @@ a.tag.label,
     #mention-link span:last-of-type {
         margin-right: 42px;
     }
+	aside {
+		background-color: var(--background-color);
+	}
     .offcanvas-right-overlay,
     aside::before {
     	background-color: rgba(0, 0, 0, 0.4);
